# django-sandbox

./: .editorconfig  .gitignore  README.md  docker-compose.yml  pyproject.toml
api/: auth.py  serializers.py  urls.py  views.py
core/: admin.py  auth.py  google_calendar.py  models.py  urls.py  views.py
core/migrations/: 0001_initial.py  0002_alter_googlecredentials_options_and_more.py  0003_alter_googlecredentials_options.py  0004_apikey.py  0005_googlecredentials_expiry.py
core/templates/core/: calendar.html  index.html  integrations.html  settings.html
django_sandbox/: asgi.py  settings.py  urls.py  wsgi.py
docker/: Dockerfile.backend.dev
scripts/: start_development_environment.sh
templates/: base.html
